--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.16.0
-  tuple: ^1.0.1
-  date_utils: ^0.1.0
+  tuple: ^1.0.2
+  date_utils: ^0.1.0+2
 
 dev_dependencies:
   flutter_test:
