--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,15 +5,15 @@ author: Eric Windmill <ericwindmill.com>
 homepage: https://github.com/apptreesoftware/flutter_calendar
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.16.0
+  intl: 0.17.0-nullsafety.2
   tuple: ^1.0.2
   date_utils:
-    git: https://github.com/AppleEducate/date_utils
+    git: https://github.com/pabloamg/date_utils
 
 dev_dependencies:
   flutter_test:
