--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
   intl: ^0.18.0
   tuple: ^2.0.1
   date_utils:
-    git: https://github.com/pabloamg/date_utils.git
+    git:
+      url: https://github.com/pabloamg/date_utils.git
+      commit: 9231011
+
 
 dev_dependencies:
   flutter_test:
