--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ homepage: https://github.com/apptreesoftware/flutter_calendar
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
-
+publish_to: none
 dependencies:
   flutter:
     sdk: flutter
@@ -15,7 +15,7 @@ dependencies:
   date_utils:
     git:
       url: https://github.com/pabloamg/date_utils.git
-      commit: 04cebd1
+      ref: 04cebd1
 
 
 dev_dependencies:
